<resources>
    <string name="app_name">Eze2chooz</string>
    <string name="choice1">Choice n°1</string>
    <string name="choice2">Choice n°2</string>
    <string name="choice3">Choice n°3</string>
    <string name="choice4">Choice n°4</string>
    <string name="choice5">Choice n°5</string>
    <string name="ez_it">EZE IT</string>
    <string name="Start_button">Start</string>
    <string name="Need">YOU NEED</string>
    <string name="Error_equal">You can not have 2 times the same choice</string>
    <string name="Error_nb_choices">Error: You must enter at least 2 choices</string>
    <string name="DisplayShake">You cannot decide between the following choices : </string>
    <string name="DisplayResume">Help you find your way between choices</string>
    <string name="UseFlatIcon">Icon made by Freepik from www.flaticon.com</string>

</resources>
