<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="toucoumer.eze2chooz.choices">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextChoice1"
        android:hint="@string/choice1"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_below="@+id/imageButtonHome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:inputType="text" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextChoice2"
        android:hint="@string/choice2"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_below="@+id/editTextChoice1"
        android:layout_marginTop="20dp"
        android:inputType="text" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextChoice3"
        android:hint="@string/choice3"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_below="@+id/editTextChoice2"
        android:layout_marginTop="20dp"
        android:inputType="text" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextChoice4"
        android:hint="@string/choice4"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_below="@+id/editTextChoice3"
        android:layout_marginTop="20dp"
        android:inputType="text" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextChoice5"
        android:hint="@string/choice5"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_below="@+id/editTextChoice4"
        android:layout_marginTop="20dp"
        android:inputType="text" />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonHome"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/house204"
        android:minHeight="64dp"
        android:minWidth="64dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonNext"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/play45" />

</RelativeLayout>
